--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <title>Timer basic</title>
     <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
   </head>
-  <body>
+  <body style="text-align: center; width: 90%; margin: 0 auto;">
     <div>
       <p>
-        Timer Countdown (HH:MM): <span id="value">0:0</span>
+        Timer Countdown (HH:MM): <span id="timer-display">00:00</span>
 
-        <button id="button-timer">Start Timer</button>
+        <hr>
+        <div>
+          <h1>Input Time:</h1>
+          <form>
+            <label>
+              Minute
+              <input type="number" 
+                     id="input-minute"
+                     name="mins" 
+                     value={this.state.mins} min="0" max="15"/>
+            </label>
+            <label>
+              Seconds
+              <input type="number" 
+                     id="input-second"
+                     name="secs"  
+                     value={this.state.secs} min="0" max="60"/>
+            </label>
+            <hr/>
+            <button id="button-timer" type="submit" value="Click">
+            Start Timer
+            </button>
+          </form>
+        </div>
       </p>
     </div>
     <script>
@@ -20,34 +43,51 @@
         switch (action.type) {
           case 'START_TIMER':
             return state - 1
+          case 'SET_TIME':
+            return state = totalTime
           default:
             return state
         }
       }
-      var store = Redux.createStore(timer)
-      var valueEl = document.getElementById('value')
+      const store = Redux.createStore(timer)
+      const timerDisplay = document.getElementById('timer-display')
+
+      let timerInterval, totalTime
+      
       function render() {
         const totalTime = store.getState();
-        let secs = Math.floor(totalTime / 60);
-        let mins = Math.floor(totalTime % 60);
+        if ( totalTime < 0 ) {
+          clearInterval(timerInterval)
+        } else {
+          let mins = Math.floor(totalTime / 60);
+          let secs = Math.floor(totalTime % 60);
 
-        if ( mins < 10 ) {
-          mins = "0" + mins;
+          if ( mins < 10 ) {
+            mins = "0" + mins;
+          }
+
+          if ( secs < 10 ) {
+            secs = "0" + secs;
+          }
+          timerDisplay.innerHTML = `${mins}:${secs}`
         }
-
-        if ( secs < 10 ) {
-          secs = "0" + secs;
-        }
-
-        valueEl.innerHTML = `${mins}:${secs}`
       }
+
       render()
       store.subscribe(render)
 
       document.getElementById('button-timer')
-        .addEventListener('click', function () {
+        .addEventListener('click', function (e) {
+          e.preventDefault()
+          
+          const min = parseInt(document.getElementById('input-minute').value)
+          const sec = parseInt(document.getElementById('input-second').value)
 
-          setInterval(function () {
+          totalTime = min * 60 + sec
+
+          store.dispatch({ type: 'SET_TIME'})
+
+          timerInterval = setInterval(function () {
             store.dispatch({ type: 'START_TIMER' })
           }, 1000)
         })
